# ProjetoFinal_PI-CIN0005

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c  package-lock.json
Tutorial/: WSL.md
assets/: menufodao.png:Zone.Identifier
assets/cadeado/cadeado/: cadeado.c  tasks.json
include/: common.h  game.h  scene.h  scenecreditos.h  scenezoomcaixaarmario.h  state_manager.h  utility.h
include/core/: fases.h  player.h  state_manager.h
include/scenes/: scenecreditos.h  sceneending.h  scenegameplay.h  scenemenu.h  scenezoombilhete.h  scenezoomestante.h
include/scenes/zoom/: scenezoombilhete.h  scenezoomcaixaarmario.h  scenezoomcaixacama.h  scenezoomdiario.h  scenezoomestante.h  scenezoomgarrafa.h  scenezoompirata.h
src/: common.h  main.c  scene.c  scenecreditos.c  scenecreditos.h  sceneending.c  scenegameplay.c  scenegameplay.h  scenemenu.c  scenezoombilhete.c  scenezoomcaixaarmario.c  scenezoomcaixacama.c  scenezoomcaixacama.h  scenezoomdiario.c  scenezoomestante.c  scenezoomgarrafa.c  scenezoomgarrafa.h  scenezoompirata.c  state_manager.c  statemachine.c  statemachine.h  utility.c
src/core/: fases.c  main.c  state_manager.c
src/scenes/: scenecreditos.c  sceneending.c  scenegameplay.c  scenemenu.c  scenezoomdiario.c  scenezoomestante.c  scenezoompirata.c
src/scenes/zoom/: scenezoombilhete.c  scenezoomcaixaarmario.c  scenezoomcaixacama.c  scenezoomdiario.c  scenezoomestante.c  scenezoomgarrafa.c  scenezoompirata.c
